--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 
-       <br><p id="matheus">Desenvolvido por @euiarleymatheus :)</p>
+       <br><p id="matheus">Desenvolvido por @euiarleymatheus</p>
       </div>
 
      </div>
